--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "devCommand": "uvicorn main:app --reload",
+    "devCommand": "uvicorn main:app --host 0.0.0.0 --port 8000",
     "builds": [
       {
         "src": "api/main.py",
